--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,9 @@ dependencies {
 
     // utiles
     implementation 'org.modelmapper:modelmapper:3.1.1'
+
+    // mysql
+    runtimeOnly 'mysql:mysql-connector-java'
 }
 
 dependencyManagement {
