--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'org.modelmapper:modelmapper:3.1.1'
 
     // mysql
-    runtimeOnly 'mysql:mysql-connector-java'
+    implementation 'com.mysql:mysql-connector-j:8.0.33'
 }
 
 dependencyManagement {
