--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: auth-service
   config:
-    configserver:${CONFIG_URI:http://localhost:8888}
+    import: configserver:${CONFIG_URI:http://localhost:8888}
   cloud:
     config:
       profile: dev
