fix(#7): 헬스 체크 관련 오류 수정
- Security 설정 때문에 헬스 체크 401 오류 수정

--- a/charts/templates/configmap.yml
+++ b/charts/templates/configmap.yml
@@ -29,3 +29,6 @@ data:
           grant-type: {{ .Values.config.oauth.kakao.granttype | default "authorization_code"}}
       jwt:
         secret: ${JWT_SECRET}
+      management:   
+        security:
+          enable: false
