--- a/build.gradle
+++ b/build.gradle
@@ -30,16 +30,13 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-    // spring cloud
-    implementation 'org.springframework.cloud:spring-cloud-starter-config'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
     // security
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -56,7 +53,8 @@ dependencies {
     implementation 'org.modelmapper:modelmapper:3.1.1'
 
     // mysql
-    implementation 'com.mysql:mysql-connector-j:8.0.33'
+    implementation 'mysql:mysql-connector-java:8.0.33'
+
 }
 
 dependencyManagement {
